rename greeter.demo to greeter.javaexec and configure jvmArgs